--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.war
 *.ear
 
+# Library Files #
+!lib
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
@@ -59,7 +62,7 @@ atlassian-ide-plugin.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
-crashlytics.propertiesgit
+crashlytics.properties
 crashlytics-build.properties
 
 
