--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 *.ear
 
 # Library Files #
-!lib
+!lib/*.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
